# coffee_db

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  app.py  app_2.py  coffee_db.py  pyproject.toml  requirements.txt  temp_docker_app.py
coffee-db-terraform/: .terraform.lock.hcl  ec2.tf  ecr.tf  ecs.tf  main.tf  rds_db.tf  task_definition.tf  variables.tf  versions.tf  vpc.tf
coffee-db-terraform/rds_db/: outputs.tf  rds_db.tf  securitygroups.tf  variables.tf  versions.tf
coffee-db-terraform/rds_db/terraform-backend/: main.tf  variables.tf
coffee-db-terraform/terraform-backend/: .terraform.lock.hcl  main.tf
coffee_db/: __init__.py  coffee.py  coffee_db.py  data_loaders.py  db_init.sql  settings.py  validate.py
coffee_db/app/pages/: __init__.py
coffee_db/app/pages/home_page/: __init__.py  home_page.py
coffee_db/app/utils/: __init__.py  page.py  site.py  tab.py
coffee_db/database/: __init__.py  aws_utils.py  config.py  heroku_psql.py  psql_db.py
coffee_db/streamlit_utils/: forms.py
coffee_db/visualizations/: world_map_visualizer.py
